# HDCG

./: CMakeLists.txt
data/: feature_set.xml
data/training/: 1.xml  3.xml  5.xml  example_0001.xml
src/: CMakeLists.txt
src/dcg/: CMakeLists.txt  dcg.cc  dcg_demo_hdcg.cc  dcg_test_hdcg.cc
src/dcg/h2sl_hdcg/: dcg.h
src/language/: CMakeLists.txt  phrase.cc
src/language/h2sl_hdcg/: phrase.h
src/llm/: CMakeLists.txt  feature_product.cc  feature_set.cc  feature_set_demo_hdcg.cc  feature_set_hdcg_demo.cc  feature_spatial_function.cc  feature_spatial_function_child_matches_child.cc  feature_spatial_function_matches_child.cc  feature_spatial_function_object_matches_child.cc
src/llm/h2sl_hdcg/: feature_product.h  feature_set.h
src/symbol/: CMakeLists.txt  grounding_set.cc  grounding_set_demo_hdcg.cc  spatial_function.cc
src/symbol/h2sl_hdcg/: grounding_set.h  spatial_function.h
src/util/: CMakeLists.txt  gui_demo_hdcg.cc  llm_train_hdcg.cc
