cmake_minimum_required(VERSION 2.8)
project(hdcg_sp)

if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  message("setting CMAKE_INSTALL_PREFIX")
  set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR} CACHE PATH "default install prefix" FORCE)
endif(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

message("CMAKE_INSTALL_PREFIX:${CMAKE_INSTALL_PREFIX}")

include(ExternalProject)
ExternalProject_Add(h2sl
  PREFIX h2sl
  DOWNLOAD_COMMAND git clone https://github.com/dqyi11/h2sl.git h2sl
  CMAKE_ARGS -DCMAKE_BUILD_TYPE=Debug -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_MODULE_PATH=${CMAKE_INSTALL_PREFIX}/share/cmake-${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}/Modules
)

ExternalProject_Add(h2sl_hdcg
  DEPENDS h2sl
  PREFIX h2sl_hdcg
  SOURCE_DIR ${PROJECT_SOURCE_DIR}/src
  CMAKE_ARGS -DCMAKE_BUILD_TYPE=Debug -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_MODULE_PATH=${CMAKE_INSTALL_PREFIX}/share/cmake-${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}/Modules
)
ExternalProject_Add_Step(h2sl_hdcg fb
  ALWAYS 1
  DEPENDERS build
)
install(TARGETS)
